# shredder_derive

./: Cargo.toml
src/: attrs.rs  err.rs  finalize_derive.rs  lib.rs  scan_derive.rs
