[package]
name = "shredder_derive"
description = "Backing derives for the shredder library"
categories = []
keywords = []

authors = ["Gregor Peach <gregorpeach@gmail.com>"]
repository = "https://github.com/Others/shredder_derive"

license = "MIT"

version = "0.2.0-dev"
edition = "2018"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
